--- a/packages/components/src/components/tooltip/tooltip.css
+++ b/packages/components/src/components/tooltip/tooltip.css
@@ -17,11 +17,11 @@
   --font-weight: var(--telekom-typography-font-weight-regular);
   --font-size: var(--telekom-typography-font-size-body);
   --line-height: var(--telekom-typography-line-spacing-standard);
-  --spacing: var(--telekom-spacing-unit-x-05) var(--telekom-spacing-unit-x-2);
+  --spacing: var(--telekom-spacing-unit-x05) var(--telekom-spacing-unit-x2);
   /*arrow*/
   /*FIXME:TOKEN use telekom-spacing-unit-*?*/
   --arrow-size: 0.31rem;
-  --arrow-offset: var(--telekom-spacing-unit-x-2);
+  --arrow-offset: var(--telekom-spacing-unit-x2);
   /*tooltip hide*/
   --max-width: 20rem;
   --transition-delay-hide: var(--telekom-motion-duration-instant);
